conditional in constructor instead

--- a/.gitignore
+++ b/.gitignore
@@ -506,3 +506,5 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/latex,visualstudiocode,node
+package-lock.json
+package.json
